--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Aston's DS & ML Devlog
+title: Aston's DS/ML Devlog
 email: astonkim@icloud.com
 author: Aston Kim
 # For example:
