Change font style beta test ver.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author: Aston Kim
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Aston Kim's DEVLOG (c) 2022-{currentYear} {author}"
+copyright: "Aston Kim's DS/ML DEVLOG (c) 2023-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
   공부한 내용들을 잊지 않게 기록하고 공유하고자 끄적이는 Devlog 입니다.
