--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,7 +1,7 @@
 home:
   heading: | 
-    "사람처럼 학습하는 기계"를 학습하는 
-    Aston's AI Data Lab
-  subheading: "#머신러닝 #딥러닝 #데이터분석 #데이터시각화 #python #pytorch #tableau #mysql #kaggle "
+    "사람처럼 학습하는 기계"를 
+    학습하는 Aston's AI Lab
+  subheading: "#머신러닝 #딥러닝 #데이터분석 #데이터시각화 #python #pytorch #tableau #mysql #kaggle"
   banner: ""
 
